[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/TelaNome.gd" type="Script" id=1]
[ext_resource path="res://Sprits/1257cb9f52a4d10.jpg" type="Texture" id=2]
[ext_resource path="res://Sprits/botoes/tela1.png" type="Texture" id=3]
[ext_resource path="res://Sprits/FrasePergunta.png" type="Texture" id=4]
[ext_resource path="res://Sprits/FraseAtencao.png" type="Texture" id=5]
[ext_resource path="res://Sprits/botaoretangulo.png" type="Texture" id=6]
[ext_resource path="res://Sprits/botaoretangulo2.png" type="Texture" id=7]
[ext_resource path="res://Sprits/botoes/sim.png" type="Texture" id=8]
[ext_resource path="res://Sprits/botoes/nao.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource_name = "PerguntaAnim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BtnNao:rect_position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 750, 400 ), Vector2( 750, 1043 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BtnSim:rect_position")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 400 ), Vector2( 400, 1043 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FrasePergunta:position")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360.5, 223.5 ), Vector2( 360.5, 866.401 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FrasePergunta:rotation_degrees")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FraseAtencao:position")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 289.262 ), Vector2( 360, 932.163 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("FraseAtencao:rotation_degrees")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BtnSim/Sprite:position")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 63.0882, 33.0792 ), Vector2( 63.0882, 33.0792 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BtnSim/Sprite:rotation_degrees")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BtnNao/Sprite:position")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64.994, 31.5179 ), Vector2( 64.994, 31.5179 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BtnNao/Sprite:rotation_degrees")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Painel:position")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 302.5, 150.5 ), Vector2( 302.5, 793.401 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Painel:rotation_degrees")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="TelaNome" type="Node2D"]

script = ExtResource( 1 )

[node name="Fundo" type="TextureRect" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 0.0
margin_top = 0.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}
mouse_filter = 1

[node name="Painel" type="Sprite" parent="."]

position = Vector2( 70.1963, -412.191 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( 230.227, 535.101 )

[node name="FrasePergunta" type="Sprite" parent="."]

position = Vector2( 360.5, 223.5 )
texture = ExtResource( 4 )
centered = false

[node name="FraseAtencao" type="Sprite" parent="."]

position = Vector2( 360, 289.262 )
texture = ExtResource( 5 )
centered = false

[node name="BtnSim" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 400.0
margin_top = 400.0
margin_right = 528.0
margin_bottom = 465.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
params/resize_mode = 0
texture_scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
mouse_filter = 0

[node name="Sprite" type="Sprite" parent="BtnSim"]

position = Vector2( 63.0882, 33.0792 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 8 )

[node name="BtnNao" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 750.0
margin_top = 400.0
margin_right = 878.0
margin_bottom = 465.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
params/resize_mode = 0
texture_scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
mouse_filter = 0

[node name="Sprite" type="Sprite" parent="BtnNao"]

position = Vector2( 64.994, 31.5179 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 9 )

[node name="AnimPergunta" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/PerguntaAnim = SubResource( 1 )
playback_active = true
playback_speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="BtnSim" to="." method="_on_BtnSim_pressed" binds=[  ]]

[connection signal="pressed" from="BtnNao" to="." method="_on_BtnNao_pressed" binds=[  ]]
